--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
 /* general styles  */
-body,
-.filter-specifics-item,
-.filter-grid-item {
+body {
   font-family: 'Roboto', sans-serif;
   font-size: 1rem;
   font-weight: 400;
